--- a/backend-assignment-1/build.gradle
+++ b/backend-assignment-1/build.gradle
@@ -6,12 +6,16 @@ plugins {
 
 group = 'lnu.sa224ny'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
 
 configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
 	}
+}
+
+java {
+	sourceCompatibility = JavaVersion.VERSION_17 // new
+	targetCompatibility = JavaVersion.VERSION_17 // new
 }
 
 repositories {
