--- a/frontend-assignment-1/package.json
+++ b/frontend-assignment-1/package.json
@@ -12,7 +12,9 @@
     "bootstrap": "^5.2.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-select": "^5.6.0",
+    "vite-plugin-pwa": "^0.13.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
