--- a/frontend-assignment-1/package.json
+++ b/frontend-assignment-1/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "serve": "serve -s dist"
   },
   "dependencies": {
     "bootstrap": "^5.2.2",
