--- a/frontend-assignment-1/Dockerfile
+++ b/frontend-assignment-1/Dockerfile
@@ -9,7 +9,7 @@ RUN yarn global add typescript
 RUN yarn install
 RUN yarn build
 RUN npm install -g serve
-
+ENV BACKEND_URL=$BACKEND_URL
 ENV NODE_ENV=production
 EXPOSE 3000
 
